# Rusuh-gRpc

./: .env.example  Cargo.toml  Justfile  README.md  auth.rs  build.rs
migrations/: 20250503065143_create_users_table.sql  20250508021153_create_user_info_table.sql  20250508022146_create_user_sessions_table.sql  20250508024808_create_user_security_table.sql
proto/: auth.proto
src/: lib.rs  main.rs
src/application/: auth_use_case.rs
src/config/: db.rs  env.rs  redis.rs
src/core/: server.rs
src/domain/: jwt.rs  mod.rs  redis_repository.rs  repository.rs  user.rs  validator.rs
src/domain/dto/: auth_dto.rs
src/domain/entity/: user.rs  user_info.rs  user_security.rs  user_sessions.rs
src/domain/port/: db_port.rs  redis_port.rs
src/domain/port/db/: user_info_port.rs  user_port.rs  user_security_port.rs  user_session_port.rs
src/domain/service/: jwt_service.rs  otp_service.rs  totp_service.rs
src/handler/: auth_handler.rs
src/infrastructure/: redis_repository.rs  user_repository.rs
src/infrastructure/db/: user_adapter.rs  user_info_adapter.rs  user_security_adapter.rs  user_session_adapter.rs
src/infrastructure/notification/: email_adapter.rs
src/infrastructure/redis/: redis_adapter.rs
src/interceptor/: auth_interceptor.rs
src/interface/common/: client_info.rs
src/interface/grpc/: auth_handler.rs
src/interface/grpc/handler/: auth_handler.rs
src/interface/grpc/layer/: logging_layer.rs
src/interface/interceptor/: auth_interceptor.rs
src/pb/: auth.rs
src/service/: auth_service.rs
src/util/: client_info.rs  email.rs  util.rs
src/util/template/: otp.html
