[package]
name = "rusuh-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.13.1", features = ["transport", "prost"] }
prost = { version = "0.13.5" }
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "macros", "ipnet"] }
dotenv = "0.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
async-trait = "0.1.88"
bcrypt = "0.17.0"
tonic-reflection = "0.13.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
lettre = { version = "0.11.16", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tera = "1.20.0"
once_cell = "1.21.3"
otpauth = "0.5.1"
rand = "0.9.1"
base32 = "0.5.1"
reqwest = { version = "0.12.15", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"] }
http = "1.3.1"
http-body = "1.0.1"
futures = "0.3.31"

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }

[lib]
name = "rusuh_grpc"
path = "src/lib.rs"

